<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_nav"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_orchards"
            android:icon="@drawable/ic_orchard_nav"
            android:title="@string/nav_orchards" />
        <item
            android:id="@+id/nav_regions"
            android:icon="@drawable/ic_map_nav"
            android:title="@string/nav_regions" />
        <item
            android:id="@+id/nav_trees"
            android:icon="@drawable/ic_tree_nav"
            android:title="@string/nav_trees" />
        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/ic_analytics"
            android:title="@string/nav_analytics" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_nav"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_nav"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_about" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
